  - 00_CUL responds to CUR request. These are sent as long FS20 messages, with
    a housecode stored in CUR_id_list attribute of the CUL device. If the ID
    matches, the message is analyzed, and an FS20 message to the same address
    is sent back. The CUR must have reception enabled.
    Right now status/set time/set FHT desired temp are implemented.

- Fri Jan  6 (Boris)
  - daily/monthly cumulated values for EMWZ/EMGZ/EMWM with 15_CUL_EM by Klaus

- Fri Jan  9
  - Added a unified dispatch for CUL/FHZ and CM11, since all of them used the
    same code.
  - Addedd IODev attribute to FS20/FHT/HMS/KS300/CUL_WS/CUL/EMWZ/EMGZ/EMEM
- Sun Jan 11 (Klaus)
  - Added fixedrange option day|week|month|year (for pgm2)
    e.g.: attr wlEnergiemonat fixedrange month
  - Added multiple room assignments for one device (for pgm2):
    e.g.: attr Heizvorlauftemp room Energie,Heizung
  - Added attr title and label(s) for more flexible .gplot files (for pgm2)
    e.g.: attr wl_KF title "Fenster:".$value{KellerFenster}.", Entfeuchter: ".$value{Entfeuchter}
          .gplot: <TL> (is almost there!)
          attr wl_KF label "Fenster":"Entfeuchter"
          .gplot: <L0> ... <L9> (constant text is to be replaced individually)
  - Added attr global logdir, used by wildcard %ld in perl.pm
    e.g.: attr global logdir /var/tmp
          define emGaslog FileLog %ld/emGas.log emGas:.*CNT.*

- Sat Feb 15 2009 (Boris)
  - added counter differential per time in 81_M232Counter.pm, commandref.html
    updated

- Thu Mar 29 2009 (MartinH)
  - pgm3: bugfix, format table for userdef
  - pgm3: feature X10_support, taillogorder optional with date
  - pgm3: HMS100CO added, fhem.html relating pgm3 updated

- Sat May 30 2009 (Rudi)
  - 99_SUNRISE_EL: sunrise/sunset called in "at" computes correctly the next
    event. New "sunrise()/sunset()" calls added, min max optional parameter.

- Sun May 31 2009 (Boris)
  - 81_M232Counter.pm: counter stops at 65536; workaround makes counter wraparound