@@ -119,7 +119,7 @@ with DEVICEID substituted by the device's ID.
 <H3>6. USB extenders</H3>
 
 To increase the maximum cable length from 5 meters to 10 meters, so-called
-USB extenders are on sale. The consist of a fixed passive 1-port hub at the end of
+USB extenders are on sale. They consist of a fixed passive 1-port hub at the end of
 an USB cable. This drives the USB to its limits and may cause all sorts of
 problems on the bus. Either do not use USB extenders (confirmed, see [10]) at all
 or put an active (self-powered) hub in the middle (unconfirmed).
